# vapor

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENCE  Makefile  README.md  ci  main.cpp
analyzer/: analysis_context.cpp  binary_expression.cpp  block.cpp  boolean.cpp  closure.cpp  expression.cpp  function.cpp  id_expression.cpp  if.cpp  integer.cpp  ir_context.cpp  module.cpp  optimization_context.cpp  overload_set.cpp  postfix_expression.cpp  return.cpp  scope.cpp  simplification_context.cpp  statement.cpp  symbol.cpp  type.cpp  variable.cpp
analyzer/expressions/: binary.cpp  boolean.cpp  call.cpp  closure.cpp  expression.cpp  expression_list.cpp  id.cpp  identifier.cpp  integer.cpp  member.cpp  member_access.cpp  overload_set.cpp  postfix.cpp  struct.cpp  variable.cpp
analyzer/semantic/: context.cpp  declaration.cpp  overloads.cpp  parameter_list.cpp
analyzer/semantic/expressions/: binary.cpp  call.cpp  closure.cpp  (+7 more)
analyzer/simplification/: context.cpp  replacements.cpp
analyzer/statements/: block.cpp  declaration.cpp  function_declaration.cpp  if.cpp  overload_set.cpp  return.cpp  statement.cpp
analyzer/types/: boolean.cpp  closure.cpp  function.cpp  integer.cpp  member_assignment.cpp  overload_set.cpp  sized_integer.cpp  struct.cpp  type.cpp  unconstrained.cpp
analyzer/variables/: boolean.cpp  expression.cpp  integer.cpp  member.cpp  overload_set.cpp  variable.cpp
codegen/: cxx.cpp  generator.cpp  llvm_ir.cpp  printer.cpp  result.cpp
codegen/cxx/: function.cpp  instruction.cpp  names.cpp  storage.cpp  type.cpp  variable.cpp
codegen/ir/: function.cpp  instruction.cpp  module.cpp  variable.cpp
codegen/llvm_ir/: function.cpp  instruction.cpp  type.cpp  variable.cpp
codegen/printer/: function.cpp  instruction.cpp  type.cpp
doc/: 03.functions.md  empty-test.vpr  licence-cpp-formatted  mkdocs.yml
lexer/: lexer.cpp
lib/: CMakeLists.txt  print_helpers.cpp
lib/analyzer/: ast.cpp  function.cpp  ir_context.cpp  module.cpp  scope.cpp  symbol.cpp
lib/analyzer/expressions/: binary.cpp  boolean.cpp  call.cpp  closure.cpp  constant.cpp  entity.cpp  expression.cpp  expression_list.cpp  expression_ref.cpp  identifier.cpp  import.cpp  instance.cpp  integer.cpp  member.cpp  member_access.cpp  module.cpp  overload_set.cpp  postfix.cpp  sized_integer.cpp  struct.cpp  struct_literal.cpp  template.cpp  type.cpp  typeclass.cpp  typeclass_instance.cpp
lib/analyzer/semantic/: context.cpp  function.cpp  overload_set.cpp  overloads.cpp  parameter_list.cpp  scope.cpp  symbol.cpp  typeclass.cpp  typeclass_instance.cpp
lib/analyzer/semantic/expressions/: binary.cpp  call.cpp  closure.cpp  expression_list.cpp  identifier.cpp  instance.cpp  integer.cpp  member_access.cpp  postfix.cpp  struct.cpp  template.cpp  typeclass.cpp
lib/analyzer/semantic/statements/: block.cpp  declaration.cpp  function.cpp  function_declaration.cpp  if.cpp
lib/analyzer/simplification/: context.cpp  replacements.cpp
lib/analyzer/simplification/expressions/: binary.cpp  call.cpp  closure.cpp  expression_list.cpp  instance.cpp  postfix.cpp  struct.cpp  template.cpp  typeclass.cpp
lib/analyzer/simplification/statements/: block.cpp  declaration.cpp  function.cpp  if.cpp
lib/analyzer/statements/: block.cpp  declaration.cpp  function.cpp  if.cpp  return.cpp  statement.cpp
lib/analyzer/types/: archetype.cpp  boolean.cpp  closure.cpp  function.cpp  integer.cpp  member_assignment.cpp  module.cpp  overload_set.cpp  sized_integer.cpp  struct.cpp  type.cpp  typeclass.cpp  typeclass_instance.cpp  unconstrained.cpp  unresolved.cpp
lib/codegen/: generator.cpp  llvm_ir.cpp  printer.cpp  result.cpp
lib/codegen/ir/: scope.cpp  type.cpp  variable.cpp
lib/codegen/llvm_ir/: function.cpp  instruction.cpp  type.cpp  variable.cpp
lib/codegen/llvm_ir/instructions/: bool.cpp  destruction.cpp  function_call.cpp  int.cpp  jump.cpp  phi.cpp  return.cpp  struct.cpp
lib/codegen/printer/: instruction.cpp  type.cpp  variable.cpp
lib/config/: compiler_options.cpp  language_options.cpp  pragmas.cpp
lib/lexer/: lexer.cpp
lib/parser/: ast.cpp  binary_expression.cpp  block.cpp  declaration.cpp  expression.cpp  expression_list.cpp  function.cpp  id_expression.cpp  if_statement.cpp  import_expression.cpp  lambda_expression.cpp  module.cpp  parameter_list.cpp  parser.cpp  postfix_expression.cpp  return_expression.cpp  statement.cpp  struct.cpp  template.cpp  typeclass.cpp
lib/proto/: ast.proto  entity.proto  import.proto  module.proto  range.proto  type.proto  type_parts.proto  type_reference.proto
lib/proto/expressions/: overload_set.proto  type.proto  typeclass.proto
lib/proto/types/: overload_set.proto  struct.proto
librt/: crt1.ll
parser/: argument_list.cpp  binary_expression.cpp  block.cpp  capture_list.cpp  declaration.cpp  expression.cpp  expression_list.cpp  function.cpp  id_expression.cpp  if_statement.cpp  import_expression.cpp  lambda_expression.cpp  member_expression.cpp  module.cpp  parameter_list.cpp  parser.cpp  postfix_expression.cpp  return_expression.cpp  statement.cpp  struct.cpp  unary_expression.cpp
runtime/: CMakeLists.txt  crt1.ll
src/: CMakeLists.txt  main.cpp
src/cli/: cli.cpp  cli.h
tests/: CMakeLists.txt  main.cpp
tests-full/: .gitignore  run
tests-full/basic/: basic.vpr  identity_constant_folded.vpr
tests-full/modules/: ackermann.vpr  exports.vpr  failed_import_1.vpr  failed_import_2.vpr  failed_import_3.vpr  failed_import_4.vpr  import_types.vpr  simple_import.vpr
tests-full/typeclasses/: basic.vpr  function_not_defined.vpr  nonconstant.vpr
tests/analyzer/: helpers.h  scope.cpp
tests/analyzer/expressions/: expression.cpp  struct.cpp  struct_literal.cpp  struct_value.cpp
tests/analyzer/statements/: declaration.cpp  if.cpp
tests/analyzer/variables/: struct.cpp  variable.cpp
tests/lexer/: helpers.h  strings.cpp
tests/parser/: binary_expression.cpp  declaration.cpp  function.cpp  helpers.h  id_expression.cpp  if_statement.cpp  lambda_expression.cpp  postfix_expression.cpp  return_expression.cpp  struct.cpp  template.cpp  typeclass.cpp
(+238 files in other folders)
